# opencv-example

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cc
